# wayless

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: main.yml
include/core/: Angle.hpp  AngularVelocity.hpp  Entity.hpp  Pos2.hpp  Types.hpp  Vec2.hpp  Vehicle.hpp  World.hpp
src/: simulator.cpp
